--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-4"></h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-2" style='color: #163860 !important' href="https://profit-maker3.live/2pkF1J?sub1=Dilya&sub2=dimulty&sub4=2378063962487210"><span class="mobi-mbri mobi-mbri-success mbr-iconfont mbr-iconfont-btn"></span>NOT A ROBOT</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-2" style='color: #163860 !important' href="https://profit-maker3.live/zhkwGX"><span class="mobi-mbri mobi-mbri-success mbr-iconfont mbr-iconfont-btn"></span>NON UN ROBOT</a></div>
             </div>
         </div>
     </div>
